# project-harness-generator

./: .gitignore  README.md  pyproject.toml
docs/: interview-log.md  prd-project-harness-generator-v0.md
plans/: project-harness-generator-v0.md
src/project_harness_generator/: __init__.py  __main__.py  cli.py  config.py  inspection.py  render_plan.py  runs.py  workflow.py
tests/: test_import.py
tests/cli_tests/: test_cli_skeleton.py  test_command_verification.py  test_config.py  test_generate_apply_and_check.py  test_generate_preview.py  test_generated_references.py  test_inspect.py  test_runs.py  test_stage_contracts.py
